src/main/metadata/objects/FS_Address__c.object
<CustomObject>
    <fields>
        <fullName>Account_Link__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account Link</label>
        <referenceTo>Account_Link__c</referenceTo>
        <relationshipLabel>FS Addresses</relationshipLabel>
        <relationshipName>FS_Addresses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Address_Type__c</fullName>
        <label>Address Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ExternalID__c</fullName>
        <description>Acting as External ID field</description>
        <externalId>true</externalId>
        <label>ExternalID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>FS_Building_Name__c</fullName>
        <label>Building name</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FS_City__c</fullName>
        <label>City</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FS_Contract__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>FS Contract</label>
        <referenceTo>FS_Contract__c</referenceTo>
        <relationshipLabel>FS Addresses</relationshipLabel>
        <relationshipName>FS_Addresses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FS_Country__c</fullName>
        <label>Country</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FS_Defualt_address__c</fullName>
        <label>Defualt - address</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FS_District__c</fullName>
        <label>District</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FS_State__c</fullName>
        <label>State</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FS_Stay_Years__c</fullName>
        <label>Stay (Years)</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FS_Stay_months__c</fullName>
        <label>Stay (months)</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FS_Street_Name__c</fullName>
        <label>Street Name</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FS_Street_No__c</fullName>
        <label>Street No</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FS_Sub_District__c</fullName>
        <label>Sub District</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FS_Unit_No__c</fullName>
        <label>Unit No</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FS_ZipCode__c</fullName>
        <label>Post Code</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MD__c</fullName>
        <defaultValue>IF(ISPICKVAL($User.Market__c, 'AU') ,'AU', 
IF(ISPICKVAL($User.Market__c, 'CN'), 'CN', 
IF(ISPICKVAL($User.Market__c, 'TH'), 'TH',
IF(ISPICKVAL($User.Market__c, 'JP'), 'JP', 
IF(ISPICKVAL($User.Market__c, 'MY'), 'MY',
IF(ISPICKVAL($User.Market__c, 'NZ'), 'NZ',
IF(ISPICKVAL($User.Market__c, 'IN'), 'IN',
IF(ISPICKVAL($User.Market__c, 'KR'), 'KR','NA'))))))))</defaultValue>
        <label>Market discriminator</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Market__c</fullName>
        <defaultValue>IF(ISPICKVAL($User.Market__c, 'NZ') ,'NZ',
IF(ISPICKVAL($User.Market__c, 'AU') ,'AU', 
IF(ISPICKVAL($User.Market__c, 'CN'), 'CN', 
IF(ISPICKVAL($User.Market__c, 'JP'), 'JP', 
IF(ISPICKVAL($User.Market__c, 'TH'), 'TH', 
IF(ISPICKVAL($User.Market__c, 'MY'), 'MY', 
IF(ISPICKVAL($User.Market__c, 'IN'), 'IN',
IF(ISPICKVAL($User.Market__c, 'KR'), 'KR',
IF(ISPICKVAL($User.Market__c, 'TR'), 'TR','')))))))))</defaultValue>
        <label>Market</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>AU</fullName>
                </value>
                <value>
                    <fullName>CN</fullName>
                </value>
                <value>
                    <fullName>JP</fullName>
                </value>
                <value>
                    <fullName>KR</fullName>
                </value>
                <value>
                    <fullName>TH</fullName>
                </value>
                <value>
                    <fullName>MY</fullName>
                </value>
                <value>
                    <fullName>NA</fullName>
                </value>
                <value>
                    <fullName>IN</fullName>
                </value>
                <value>
                    <fullName>NZ</fullName>
                </value>
                <value>
                    <fullName>TR</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>FS Address</label>
    <nameField>
        <label>FS Address Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>FS Addresses</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>